[package]
authors = ["Lachezar Lechev <elpiel93@gmail.com>"]
edition = "2018"
name = "mav_sdk"
version = "0.1.0"

[dependencies]

tonic = "0.5.0"
prost = "0.8.0"

[dev-dependencies]
tokio = {version = "1.8", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = {version = "0.5", features = ["rustfmt"]}

[lib]
