[package]
authors = ["AeroRust <aerospace.rust@gmail.com>"]
edition = "2018"
name = "mav-sdk"
version = "0.2.0-pre"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AeroRust/mav"
homepage = "https://github.com/AeroRust/mav"
documentation = "https://docs.rs/mav-sdk"
description = """
Simple API (gRPC) for managing one or more vehicles,
providing programmatic access to vehicle information and telemetry,
and control over missions, movement and other operations.
"""
keywords = ["mavlink", "mavsdk", "grpc", "autopilot", "drones"]
categories = ["api-bindings", "science::robotics"]
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]

# rust-version = "1.56"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]

tonic = "0.8"
prost = "0.11"

# Used for serialization of generated responses
serde = { version = "1.0", features = ["derive"], optional = true }
# log = {version = "0.4", features = ["max_level_info"]}

[dev-dependencies]
tokio = { version = "1.8", features = ["macros", "rt-multi-thread", "signal"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.8"
once_cell = "1.9"

[features]
default = ["with_serde"]

# with_serde = ["serde", "log/serde"]
with_serde = ["serde"]
