[package]
name = "telemetry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mav-sdk = {path = "../mav-sdk"}
tokio = {version = "1.8", features = ["macros", "rt-multi-thread", "fs", "io-util", "signal", "sync"]}
async-trait = "0.1"

anyhow = "1"
log = {version = "0.4", features = ["max_level_info", "serde",]}
simple_logger = "1.13"

serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}
chrono = {version = "^0.4", features = ["serde"]}